[package]
name = "host_of_troubles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
